--- a/_config.yml
+++ b/_config.yml
@@ -104,5 +104,5 @@ theme: butterfly
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
   type: git
-  repository: git@github.com:chdloser/Web.git
-  branch: main
+  repository: git@github.com:chdloser/hexo-blog.git
+  branch: master
